# starfing-helper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  app.ui  main.cpp  resources.qrc
src/: about.cpp  about.h  about.ui  app.cpp  app.h  app.ui
